# Utilitis

./: CONTRIBUTING.md  README.md  install.sh  pyproject.toml
gitpush/: README.md  main.py
scripts/: __init__.py
scripts/gitpush/: API.py  README.md  alias.sh  main.py
scripts/gitpush/alias/: bash.sh  zsh.sh
