[project]
name = "utilitis"
version = "0.1.0"
description = "Simple autoamtion scripts."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Sann" }]
dependencies = [
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[project.scripts]
gitpush = "gitpush.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
