[project]
name = "utilitis"
version = "0.1.2"
description = "Simple autoamtion scripts."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Sann" }]
dependencies = [
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[project.scripts]
gitpush = "scripts.gitpush.main:NORMAL"
gitpush-y = "scripts.gitpush.main:YOLO"

[tool.setuptools.packages.find]
include = ["scripts*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
